--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   pretty_dio_logger: ^1.3.1
   easy_localization: ^3.0.7
   get_it: ^8.0.2
+  carousel_slider: ^5.0.0
 
 
 dev_dependencies:
